# Simple-Login-

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
docs/: requirements.txt
docs/source/: code.rst  conf.py  index.rst
docs/source/usage/: overview.rst
docs/source/usage/commands/: overview.rst
docs/source/usage/commands/account/: account.rst  login.rst  logout.rst
docs/source/usage/commands/alias/: activity.rst  alias.rst  custom.rst  delete.rst  get.rst  list.rst  random.rst  toggle.rst  update.rst
docs/source/usage/commands/config/: config.rst
simplelogincmd/: config.py  const.py
simplelogincmd/cli/: __init__.py  const.py  exceptions.py  lazy_group.py  main.py  util.py
simplelogincmd/cli/commands/: __init__.py  _config.py  account.py  alias.py  config.py  database.py  mailbox.py
simplelogincmd/cli/commands/account/: login.py  logout.py  mfa.py
simplelogincmd/cli/commands/account_commands/: _login.py  _logout.py  _mfa.py  login.py  logout.py  mfa.py
simplelogincmd/cli/commands/alias/: activity.py  contact.py  custom.py  delete.py  get.py  list.py  random.py  toggle.py  update.py
simplelogincmd/cli/commands/alias_commands/: _activity.py  _custom.py  _delete.py  _get.py  _list.py  _random.py  _toggle.py  _update.py  activity.py  contact.py  custom.py  delete.py  get.py  list.py  random.py  toggle.py  update.py
simplelogincmd/cli/commands/database/: delete.py  sync.py
simplelogincmd/cli/commands/database_commands/: _delete.py  _sync.py  delete.py  sync.py
simplelogincmd/cli/commands/mailbox/: create.py  delete.py  list.py  update.py
simplelogincmd/cli/commands/mailbox_commands/: _create.py  _delete.py  _list.py  _update.py  create.py  delete.py  list.py  update.py
simplelogincmd/cli/util/: __init__.py  init.py  input.py  output.py
simplelogincmd/database/: __init__.py  access_layer.py  models.py  session.py
simplelogincmd/rest/: __init__.py  client.py  const.py  exceptions.py  models.py  simplelogin.py  util.py
tests/: conftest.py
tests/fixtures/: data.py  responses.py  simplelogin.py  url.py
tests/integration/: test_help.py  util.py
tests/unit/config/: conftest.py  test_config.py
tests/unit/database/: conftest.py  test_database_management.py  test_database_models.py  test_models.py  test_session.py
tests/unit/rest/: test_simplelogin.py
(+18 files in other folders)
